# tmplt

./: .gitignore  CMakeLists.txt  README.md  Tmplt.sln
.github/workflows/: nuget.yml  release.yml  tests.yml
Tmplt.Cli/: CliInputProvider.cs  Constants.cs  Program.cs  Tmplt.Cli.csproj
Tmplt.Cli/Commands/: ConfigureCommands.cs  CreateCommands.cs
Tmplt.Core/: ConsoleReader.cs  Template.cs  TemplateConfigurator.cs  TemplateEngine.cs  TemplateItem.cs  TemplateManager.cs  TemplateVariable.cs  VariableType.cs
Tmplt.Core/Abstractions/: IConsoleReader.cs  IInputProvider.cs
Tmplt.Core/Converters/: VariableTypeJsonConverter.cs
include/: Condition.h  Template.h  TemplateEngine.h  TemplateFile.h  TemplateVariable.h  cli.h  tmplt.h
src/: Template.cpp  TemplateEngine.cpp  TemplateFile.cpp  TemplateVariable.cpp  cli.cpp  main.cpp
